Fixed the table spacing

--- a/h5bp-html5-boilerplate/css/ti.css
+++ b/h5bp-html5-boilerplate/css/ti.css
@@ -7,7 +7,8 @@ tspan {
   
 }
 table {
-  border-spacing:20px;
+  border-collapse: separate;
+  border-spacing:5px;
 }
 
 td {
@@ -17,7 +18,7 @@ td {
   border-radius:10px;
   -moz-border-radius:10px; /* Firefox 3.6 and earlier */
   border: 1px solid white;
-
+  padding: 2px;
 }
 
 td.tech {
